# KaraTube

./: .env.example  .gitignore  LICENCE  README.md  client.html  pyproject.toml  remote.html  requirements.txt  server.py  server.spec
.github/workflows/: build-windows.yml
